<resources>
    <string name="app_name">music-online-classes</string>
    <string name="name">Ime</string>
    <string name="surname">Prezime</string>
    <string name="username">Korisnicko ime</string>
    <string name="password">Lozinka</string>
    <string name="email">Email</string>
    <string name="phone_number">+381</string>
    <string name="date">Izaberi datum</string>
    <string name="professor">Profesor</string>
    <string name="student">Ucenik</string>
    <string name="education">Obrazovanje</string>
    <string name="registration">Registruj se</string>
    <string name="login">Prijavi se</string>
    <string name="forgotten_password">Zaboravili ste lozinku?</string>
    <string name="new_account">Napravite novi nalog</string>
    <string name="change_password">Promenite lozinku</string>
    <string name="new_password">Nova lozinka</string>
    <string name="confirm_new_password">Potvrda nove lozinke</string>
    <string name="select_preferences">Izaberite instrumente:</string>
    <string name="guitar">Gitara</string>
    <string name="violin">Violina</string>
    <string name="piano">Klavir</string>
    <string name="harmonica">Harmonika</string>
    <string name="trumpet">Truba</string>
    <string name="saxophone">Saksofon</string>
    <string name="drums">Bubanj</string>
    <string name="singing">Pevanje</string>
    <string name="continueText">Nastavite</string>
    <string name="no_image">Slika nije ucitana</string>
    <string name="name_label">Ime:</string>
    <string name="surname_label">Prezime:</string>
    <string name="username_label">Korisicko ime:</string>
    <string name="account_type_label">Tip naloga:</string>
    <string name="email_label">Email:</string>
    <string name="phone_number_label">Broj telefona:</string>
    <string name="date_label">Datum rodjenja:</string>
    <string name="education_label">Obrazovanje:</string>
    <string name="expertise_label">Ekspertiza:</string>
    <string name="old_password">Stara lozinka</string>
    <string name="change_profile_info">Promenite informacije na profilu</string>
    <string name="notifications_label">Obavestenja</string>
    <string name="courses_label">Kursevi</string>
    <string name="classes_label">Casovi</string>
    <string name="statistics_label">Statistika</string>
    <string name="profile_label">Profil</string>
    <string name="log_out">Odjava</string>
    <string name="all_courses">Pregled kurseva</string>
    <string name="search_courses">Pretrazite kurseve</string>
    <string name="course_rating">⭐ 4.5</string>
    <string name="course_price">Cena:</string>
    <string name="course_name">Naziv kursa</string>
    <string name="course_level">Nivo:</string>
    <string name="course_level_beginner">Pocetni</string>
    <string name="course_instrument">Instrument:</string>
    <string name="course_description">Kratak opis:</string>
    <string name="course_rating_s">Ocena:</string>
    <string name="number">5</string>
    <string name="course_content">Sadrzaj:</string>
    <string name="course_comments">Komentari:</string>
    <string name="course_comment_input">Ostavite komentar</string>
    <string name="course_save_comment">Sacuvaj komentar</string>
    <string name="search_results_s">Rezultati pretrage:</string>
    <string name="recommended_courses_s">Preporuceni kursevi</string>
    <string name="best_rated_courses_s">Najbolje ocenjeni kursevi</string>
    <string name="cheapest_courses_s">Najpristupacniji kursevi</string>
    <string name="add_to_cart">Dodaj u korpu</string>
    <string name="total_price">Ukupna cena:</string>
    <string name="buy_course">Kupi</string>
    <string name="course_progress">Progres:</string>
    <string name="professor_label">Profesor:</string>
    <string name="current_courses_label">Trenutni kursevi</string>
    <string name="reserve_term">Rezervisi termin</string>
    <string name="classes_number">Broj casova:</string>
    <string name="reserve">Rezervisi</string>
    <string name="date_simple">Datum</string>
    <string name="notification_message">Obavestenje o rezervaciji termina</string>
    <string name="time">11:00</string>
    <string name="notification_label">Obavestenja</string>
    <string name="notification_search_label">Pretrazite obavestenja</string>
    <string name="scheduled_terms_label">Zakazani termini</string>
    <string name="show_scheduled_terms">Prikazi</string>
    <string name="reservations_label">Rezervacije</string>
    <string name="terms_label">Termini</string>
    <string name="class_held_label">Odrzan</string>
    <string name="class_not_held_label">Nije odrzan</string>
    <string name="add_new_terms_label">Dodavanje novih termina</string>
    <string name="add">Dodaj</string>
    <string name="choose_time">Izaberi vreme</string>
    <string name="finished_course_label">Zavrsen kurs</string>
    <string name="accept_term_label">Prihvati</string>
    <string name="decline_term_label">Odbij</string>
    <string name="professors_courses">Moji kursevi</string>
    <string name="price_label">Cena</string>
    <string name="course_description_label">Opis kursa</string>
    <string name="course_content_label">Sadrzaj kursa</string>
    <string name="classes_number_label">Broj casova</string>
    <string name="choose_image">Izaberi sliku</string>
    <string name="new_courses_label">Novi kursevi</string>
    <string name="new_users_label">Novi korisnici</string>
    <string name="new_user_requests_label">Zahtevi za dodavanjem novih korisnika</string>
    <string name="new_course_requests_label">Zahtevi za dodavanjem novih kurseva</string>

    <string-array name="instrument_array">
        <item>Gitara</item>
        <item>Violina</item>
        <item>Harfa</item>
        <item>Klavir</item>
        <item>Harmonika</item>
        <item>Truba</item>
        <item>Saksofon</item>
        <item>Bubanj</item>
        <item>Pevanje</item>
    </string-array>

    <string-array name="level_array">
        <item>Pocetni</item>
        <item>Napredni</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
