<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:padding="8dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/light_violet"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:orientation="vertical"
            android:paddingStart="8dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/course_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_name"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/professor_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/professor"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/student_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/classes_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/classes_number"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/term_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_simple"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/term_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="4dp">

            <ImageButton
                android:id="@+id/video_call_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/no_image"
                android:focusable="true"
                android:src="@drawable/videocam_icon"
                android:clickable="true"
                android:layout_gravity="center_horizontal" />

            <Button
                android:id="@+id/class_held"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:text="@string/class_held_label"
                android:textSize="12sp"
                android:layout_marginTop="4dp"
                android:visibility="gone"
                android:backgroundTint="@color/dark_violet"/>

            <Button
                android:id="@+id/class_not_held"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:text="@string/class_not_held_label"
                android:textSize="12sp"
                android:layout_marginTop="4dp"
                android:visibility="gone"
                android:backgroundTint="@color/dark_violet"/>
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
