<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:padding="8dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:background="@color/light_violet"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:orientation="vertical"
            android:paddingStart="8dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/new_course_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_name"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/new_course_professor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/professor"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/new_course_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_price"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/new_course_instrument"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_instrument"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/new_course_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_level"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="4dp">

            <Button
                android:id="@+id/acceptButton"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:text="@string/accept_term_label"
                android:textSize="12sp"
                android:layout_marginTop="4dp"
                android:visibility="visible"
                android:backgroundTint="@color/dark_violet"/>

            <Button
                android:id="@+id/declineButton"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:text="@string/decline_term_label"
                android:textSize="12sp"
                android:layout_marginTop="4dp"
                android:visibility="visible"
                android:backgroundTint="@color/dark_violet"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
