<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="8dp"
    android:padding="12dp"
    android:background="@color/light_violet">

    <TextView
        android:id="@+id/course_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_name"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/professor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/professor"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/course_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_level"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/progress_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_progress"
        android:layout_marginTop="4dp"/>

    <ProgressBar
        android:id="@+id/course_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progressTint="@color/dark_violet"
        android:layout_marginTop="12dp"
        android:progress="60"/>
</LinearLayout>
