<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="12dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/notification_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_simple"
        android:textStyle="bold"
        android:textColor="#000"
        android:textSize="18sp"
        android:paddingBottom="8dp"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/light_violet"
        android:padding="12dp"
        android:elevation="2dp">
        <TextView
            android:id="@+id/notification_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification_message"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/notification_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="14sp"
            android:paddingTop="2dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
</LinearLayout>
