<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:padding="8dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/light_violet"
        android:weightSum="3">

        <ImageView
            android:id="@+id/course_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/no_image"
            android:scaleType="fitXY"
            android:src="@drawable/broken_image" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingStart="8dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/course_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_name"
                android:textStyle="bold"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/professor_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/professor"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/course_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_price"
                android:textSize="14sp" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/select_course_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="16dp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
